# linkup-semantic-search

./: .dockerignore  README.md  system_design.excalidraw
data/: pyproject.toml
data/src/: api.py  embedding.py  fill_db.py  main.py  rss.py
data/src/repository/: connection.py  models.py
deploy/: docker-compose.yaml
deploy/dockerfiles/backend/: Dockerfile
deploy/dockerfiles/fill_db/: Dockerfile
deploy/dockerfiles/frontend/: Dockerfile
frontend/: pyproject.toml
frontend/src/: app.py
