[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.9.0.post1",
    "lxml>=5.3.0",
    "requests>=2.32.3",
    "sentence-transformers>=3.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
]
