[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "lxml>=5.3.0",
    "pgvector>=0.3.6",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
    "sentence-transformers>=3.3.1",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
]

[tool.ruff]
line-length = 120
